[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lightspeed.py"
description = "A Python wrapper for the Lightspeed API"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [{ name = "MCausc78" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["version", "dependencies"]

[project.urls]
Documentation = "https://lightspeedpy.readthedocs.io/en/latest/"
"Issue tracker" = "https://github.com/MCausc78/lightspeed.py/issues"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[project.optional-dependencies]
speed = [
    "orjson>=3.5.4",
    "aiodns>=1.1",
    "Brotli",
    "cchardet==2.1.7; python_version < '3.10'",
]
test = [
    "pytest",
    "pytest-asyncio",
    "typing-extensions>=4.3,<5",
    "tzdata; sys_platform == 'win32'",
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["UP037"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.setuptools]
packages = ["lightspeed"]
include-package-data = true